# openbb_akshare

./: .gitignore  README.md  README.zh-CN.md  __init__.py  akshare_test.ipynb  pyproject.toml  test.ipynb
docs/: akshare_test.ipynb  balance_sheet_data.xlsx  balance_sheet_em.xlsx  balance_sheet_em_hk.xlsx  balance_sheet_sina.xlsx  cash_flow_em.xlsx  equity_profile.md  forex_hist_em.xlsx  income_statement_em.xlsx  issues.ipynb  models.md  models.xlsx  stock_zh_a_spot_em.xlsx
docs/financial_data/balance_sheet/: balance_sheet_em.xlsx  balance_sheet_ths.xlsx
docs/financial_data/cash_flow/: cash_flow_em.xlsx
docs/financial_data/income_statement/: income_600028.xlsx  income_600036.xlsx  income_600519.xlsx
docs/forex/: forex_spot_em.xlsx
openbb_akshare/: __init__.py  openbb.py  router.py
openbb_akshare/models/: __init__.py  available_indices.py  balance_sheet.py  business_analysis.py  cash_flow.py  company_news.py  currency_historical.py  currency_snapshots.py  equity_historical.py  equity_ownership.py  equity_profile.py  equity_quote.py  equity_screener.py  equity_search.py  etf_holdings.py  etf_search.py  example.py  fund_holdings.py  historical_dividends.py  income_statement.py  key_metrics.py  price_performance.py
openbb_akshare/standard_models/: __init__.py  business_analysis.py  fund_holdings.py
openbb_akshare/utils/: __init__.py  ak_balance_sheet.py  ak_cash_flow.py  ak_compare_company_facts.py  ak_equity_ownership.py  ak_equity_search.py  ak_income_statement.py  ak_key_metrics.py  blob_cache.py  equity_cache.py  equity_info_cache.py  fetch_equity_info.py  fetch_quote.py  futures.csv  helpers.py  references.py  tools.py
tests/: akshare_test.ipynb  conftest.py  debug_equity_profile.py  debug_financials.py  debug_helpers.py  debug_key_metrics.py  test_ak_key_metrics.py  test_blob_cache.py  test_business_analysis.py  test_company_news.py  test_equity_historical.py  test_equity_info_cache.py  test_equity_ownership.py  test_etf_holdings.py  test_etf_search.py  test_financials.py  test_fund_holdings.py  test_helpers.py  test_router.py  test_tools.py
