[tool.poetry]
name = "openbb-akshare"
version = "0.4.39"
description = "AKShare extension for OpenBB"
authors = ["Roger Ye <shugaoye@yahoo.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_akshare" }]

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
akshare = "1.17.18"
openbb-core = { version = "^1.4.7" }
ipywidgets = "^8.1.7"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
openbb_akshare = "openbb_akshare.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
openbb_akshare = "openbb_akshare:provider"
